# python-grpc-testing-demo

./: README.md  buf.gen.yaml  buf.work.yaml  pyproject.toml
protos/: buf.yaml
protos/nikitabarskov/helloworld/v1beta1/: hello_world.proto
src/nikitabarskov/sdk/: client.py
tests/: test_hello_world_client.py
